--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "@popperjs/core": "^2.9.0",
     "bootstrap": "^5.0.0-beta2",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
+    "socket.io": "^4.0.0",
+    "socket.io-client": "^4.0.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-socket.io": "^3.0.10",
+    "vuetify": "^2.4.8",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -24,7 +29,9 @@
     "@vue/cli-service": "~4.5.0",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
-    "vue-template-compiler": "^2.6.11"
+    "vue-cli-plugin-vuetify": "^2.3.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.2"
   },
   "browserslist": [
     "> 1%",
